--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://se-ok.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Ad Extra'
 
 [module]
 [[module.imports]]
